--- a/index.html
+++ b/index.html
@@ -179,10 +179,9 @@
             padding: 0 1rem;
         }
 
-        .journey-map-container img {
-            max-width: none;
-            height: auto;
-            display: block;
+        .journey-map-img {
+            display: flex;
+            justify-content: center;
         }
 
         /* Smooth Scroll */
@@ -378,39 +377,10 @@
             <h2>2. User Journey Mapping</h2>
             <div class="journey-map-container">
                 <div class="journey-map-scroll">
-                    <div class="mermaid">
-                        journey
-                        title MedTracker App: User Journey Comparison
-                        section Morning Routine
-                        Wake up & check app: 4: Margaret, James
-                        Review daily schedule: 3: Margaret, James
-                        Take morning medication: 5: Margaret
-                        Quick medication check between meetings: 3: James
-                        section Mid-Day Management
-                        Medication reminder notification: 4: Margaret, James
-                        Log symptoms: 3: James
-                        Schedule doctor appointment: 2: Margaret
-                        Coordinate with multiple specialists: 1: James
-                        Check medication supply: 4: Margaret
-                        section Afternoon Activities
-                        Receive reminder during meeting: 2: James
-                        Take afternoon medication: 4: Margaret
-                        Share health update with family: 5: Margaret
-                        Export health data for doctor: 4: James
-                        section Evening Wrap-up
-                        Evening medication alert: 4: Margaret, James
-                        Review next day's schedule: 3: Margaret
-                        Analyze weekly health trends: 5: James
-                        Update medication log: 4: Margaret, James
-                        section Weekly Tasks
-                        Refill medications: 3: Margaret, James
-                        Review adherence stats: 4: James
-                        Share progress with doctor: 5: Margaret
-                        Plan upcoming appointments: 3: Margaret, James
-                    </div>
+                    <img src="media/image1.png" alt="User Journey Map">
                 </div>
             </div>
-            <div class="journey-map-container">
+            <div class="journey-map-img">
                 <img src="media/image2.png" alt="User Emotional Map">
             </div>
         </section>
