--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                 <li><a href="#wireframe">3. Wireframe and Prototype Designing</a></li>
                 <li><a href="#usability">4. Usability Testing Plan</a></li>
                 <li><a href="#reflection">5. Reflection</a></li>
+                <li><a href="#citations">6. Citations</a></li>
             </ul>
         </div>
 
@@ -251,15 +252,23 @@
 
             <p>To answer these questions, I will be using the following sources:</p>
             <ul>
-                <li>Smith, J., et al. (2023). "Medication Adherence in Elderly Patients with Chronic Conditions."
-                    Journal of Healthcare Technology. This study was chosen for its focus on challenges elderly patients
-                    face with medication adherence, providing insights into reminders and tracking needs.</li>
-                <li>Chen, L., & Washington, K. (2023). "Mobile Health Interventions for Medication Management."
-                    Digital Health Quarterly. Selected for its exploration of mobile interventions, guiding app feature
-                    integration and user engagement strategies.</li>
-                <li>Pew Research Center (2023). "Tech Adoption Among Older Adults." This report was included to
-                    understand technology comfort levels among older adults, ensuring the app's usability for a key
-                    demographic.</li>
+                <li>"Effectiveness of Mobile Health Intervention in Medication Adherence: A Systematic Review and
+                    Meta-Analysis". The study evaluates how effective mobile app interventions can be in enhancing
+                    medication adherence for patients with chronic diseases. </li>
+                <li>"User Engagement With mHealth Interventions to Promote Treatment Adherence and Self-Management in
+                    People with Chronic Health Conditions: Systematic Review". The review examines how users engaging
+                    with mobile health interventions affects their treatment adherence and self-management in
+                    individuals with chronic diseases.</li>
+                <li>"Involvement in Medication Safety Behaviors Among Older People with Chronic Diseases: Systematic
+                    Review of Intervention Studies". The study evaluates interventions that aim to promote involvement
+                    in medication safety in older adults with chronic diseases.</li>
+                <li>
+                    "Design Guidelines of Mobile Apps for Older Adults: Systematic Review and Thematic Analysis". The
+                    review gives a comprehensive guide on how to design a mobile app while keeping older people in mind.
+                </li>
+                <li>"Mobile Health Applications for Older Adults: A Systematic Review of Interface and Persuasive
+                    Feature Design". The review recommends certain designs for mobile health applications aimed towards
+                    older adults. It emphasizes the importance of intuitive interfaces.</li>
             </ul>
 
             <h3>Personas</h3>
@@ -510,6 +519,25 @@
                 <li>Incorporating feedback mechanisms throughout the design process</li>
             </ul>
         </section>
+        <section id="citations">
+            <h2>6. Citations</h2>
+            <ol>
+                <li>Eaton, Cyd, et al. “User engagement with mhealth interventions to promote treatment adherence and
+                    self-management in people with chronic health conditions: Systematic review.” Journal of Medical
+                    Internet Research, vol. 26, 24 Sept. 2024, https://doi.org/10.2196/50508. </li>
+                <li>Gomez-Hernandez, Miguel, et al. “Design guidelines of mobile apps for older adults: Systematic
+                    review and thematic analysis.” JMIR mHealth and uHealth, vol. 11, 21 Sept. 2023,
+                    https://doi.org/10.2196/43186.</li>
+                <li>Kim, Sun Kyung, et al. “Effectiveness of mobile health intervention in medication adherence: A
+                    systematic review and meta-analysis.” Journal of Medical Systems, vol. 49, no. 1, 17 Jan. 2025,
+                    https://doi.org/10.1007/s10916-024-02135-2. </li>
+                <li>Wang, Michael, et al. “Documentation and review of Social Determinants of health data in the EHR:
+                    Measures and Associated Insights.” Journal of the American Medical Informatics Association, vol. 28,
+                    no. 12, 21 Sept. 2021, pp. 2608–2616, https://doi.org/10.1093/jamia/ocab194. </li>
+                <li>Xu, Weixi, et al. “Involvement in medication safety behaviors among older people with chronic
+                    diseases: Systematic Review of Intervention Studies.” BMC Geriatrics, vol. 24, no. 1, 15 Oct. 2024,
+                    https://doi.org/10.1186/s12877-024-05449-5. </li>
+            </ol>
     </div>
 </body>
 
