--- a/index.html
+++ b/index.html
@@ -270,6 +270,36 @@
                     Feature Design". The review recommends certain designs for mobile health applications aimed towards
                     older adults. It emphasizes the importance of intuitive interfaces.</li>
             </ul>
+            <p>The research phase played a crucial role in shaping the design of MedTracker. By conducting secondary
+                research through existing studies on medication management and health technology adoption, valuable
+                insight was gathered about users' challenges and needs. This approach provided an efficient way to
+                understand user behavior, pain points, and motivations.
+                Key findings from the research included:
+            </p>
+            <ul>
+                <li><b>Medication management challenges:</b> Users struggled with remembering complex medication
+                    schedules and coordinating appointments with multiple healthcare providers.</li>
+                <li><b>Technology comfort levels:</b> Older adults exhibited moderate tech comfort, necessitating an
+                    intuitive and straightforward interface.</li>
+                <li><b>Communication barriers with healthcare providers: </b>Users needed a streamlined method to share
+                    health information efficiently.</li>
+            </ul>
+            <p>These insights directly influenced the design choices, ensuring the app was:</p>
+            <ul>
+                <li><b>Simple and Intuitive:</b> The design avoided unnecessary complexities, favoring a clean,
+                    user-friendly
+                    layout. This approach catered to users with varying technology comfort
+                    levels, particularly older adults who preferred straightforward navigation.</li>
+                <li><b>Colorblind Friendly:</b> The color palette
+                    was carefully selected with high contrast and colorblind-friendly combinations, ensuring readability
+                    for all users.</li>
+                <li><b>Consistent and Familiar Patterns:</b> Utilizing familiar UI components (e.g., buttons, links, and
+                    navigation styles) enhanced usability, allowing users to interact with the app comfortably without a
+                    steep learning curve.</li>
+                <li><b>Emphasis on Accessibility:</b> The text size, padding, and contrast ratios were chosen to ensure
+                    readability and usability for users with visual impairments.</li>
+                </li>
+            </ul>
 
             <h3>Personas</h3>
             <h4>James</h4>
@@ -452,9 +482,8 @@
             <p>
                 The secondary research approach proved particularly effective in understanding the broad spectrum of
                 user needs.
-                By analyzing studies like Smith et al. (2023) and the Pew Research Center's report on tech adoption
-                among older
-                adults, I identified critical patterns in medication adherence challenges and technology comfort levels.
+                By analyzing the studies, I identified critical patterns in medication adherence challenges and
+                technology comfort levels.
                 This
                 research-driven approach led to the development of two distinct personas - James and Margaret - who
                 represent
