--- a/medtracker.html
+++ b/medtracker.html
@@ -27,10 +27,15 @@
             width: 375px;
             height: 700px;
             background: white;
-            border-radius: 20px;
+            border-radius: 40px;
             overflow: hidden;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             position: relative;
+            border: 16px solid black;
+            background-image: url('phone-frame.png');
+            /* Add your phone frame image here */
+            background-size: cover;
+            background-position: center;
         }
 
         .status-bar {
